@@ -15,8 +15,8 @@
         <fileset dir="${lib.dir}">
             <include name="mysql-connector-j-9.1.0.jar"/>
             <include name="mockito-core-5.14.2.jar"/>
+            <include name="mockito-inline-5.2.0.jar"/> <!-- Added mockito-inline -->
             <include name="junit-4.13.2.jar"/>
-            <!-- Add hamcrest if you're using JUnit 4 -->
             <include name="hamcrest-core-1.3.jar"/>
             <include name="byte-buddy-1.14.11.jar"/>
             <include name="byte-buddy-agent-1.14.11.jar"/>
@@ -24,6 +24,7 @@
             <include name="powermock-core-2.0.9.jar"/>
             <include name="powermock-api-mockito2-2.0.9.jar"/>
             <include name="powermock-module-junit4-2.0.9.jar"/>
+            <include name="javassist-3.29.2-GA.jar"/> <!-- Added for PowerMock -->
         </fileset>
         <pathelement location="${build.classes.dir}"/>
         <pathelement location="${build.test.dir}"/>
@@ -44,10 +45,21 @@
         <mkdir dir="${build.classes.dir}"/>
         <mkdir dir="${build.test.dir}"/>
         <mkdir dir="${dist.dir}"/>
+        <mkdir dir="${lib.dir}"/>
+    </target>
+
+    <!-- Download missing dependencies -->
+    <target name="resolve-dependencies" depends="init">
+        <get src="https://repo1.maven.org/maven2/org/mockito/mockito-inline/5.2.0/mockito-inline-5.2.0.jar"
+             dest="${lib.dir}/mockito-inline-5.2.0.jar"
+             skipexisting="true"/>
+        <get src="https://repo1.maven.org/maven2/org/javassist/javassist/3.29.2-GA/javassist-3.29.2-GA.jar"
+             dest="${lib.dir}/javassist-3.29.2-GA.jar"
+             skipexisting="true"/>
     </target>
 
     <!-- Compile main sources -->
-    <target name="compile" depends="init">
+    <target name="compile" depends="init,resolve-dependencies">
         <javac srcdir="${src.dir}" 
                destdir="${build.classes.dir}" 
                includeantruntime="false"
@@ -73,6 +85,10 @@
     <!-- Run JUnit tests -->
     <target name="test" depends="compile-test">
         <junit printsummary="yes" haltonfailure="yes" fork="yes" showoutput="yes">
+            <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
+            <jvmarg value="--add-opens=java.base/java.io=ALL-UNNAMED"/>
+            <jvmarg value="--add-opens=java.base/java.util=ALL-UNNAMED"/>
+            <jvmarg value="-XX:+IgnoreUnrecognizedVMOptions"/>
             <classpath>
                 <path refid="project.classpath"/>
                 <pathelement location="${build.test.dir}"/>
@@ -80,13 +96,14 @@
             <formatter type="plain" usefile="false"/>
             <batchtest fork="yes">
                 <fileset dir="${test.dir}">
-                    <include name="/*Test.java"/>
-                    <include name="/Test*.java"/>
-                    <include name="test.java"/> <!-- Added specific test file -->
+                    <include name="**/*Test.java"/>
+                    <include name="**/Test*.java"/>
+                    <include name="**/test.java"/>
                 </fileset>
             </batchtest>
         </junit>
     </target>
+
 
     <!-- Run a specific test class -->
     <target name="run-single-test" depends="compile-test">
